# HappinessWebsite

./: .replit  LICENSE  README.md  app.py  forms.py  pyproject.toml
templates/: about.html  contact.html  flowerd.html  footer.html  home.html  nav.html  planning.html
